# FluidNet

./: .gitattributes  .gitignore  README.md  config.yaml
.github/workflows/: ci.yml  engine-ci.yml
assets/: blend1.webm
engine/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  imgui.ini
engine/include/: Config.hpp  Engine.hpp  EngineConfig.hpp.in  FluidScene.hpp  GLLoader.hpp  ModelRegistry.hpp  Profiling.hpp  Renderer.hpp  Scene.hpp  SceneState.hpp  Simulation.hpp  SimulationBuffer.hpp
engine/shaders/: fluid.frag  fluid.vert  fluid_debug.frag
engine/src/: Config.cpp  Engine.cpp  FluidScene.cpp  GLLoader.cpp  ModelRegistry.cpp  Renderer.cpp  SceneState.cpp  Simulation.cpp  SimulationBuffer.cpp  main.cpp
ml/: README.md  cuda_check.py  main.py  pyproject.toml  tox.ini
ml/config/: base_config.yaml  config.py  training_config.py
ml/config/model_architectures/: UNet_large.yaml  UNet_medium.yaml  UNet_medium_nearest.yaml  UNet_small-medium.yaml  UNet_small.yaml
ml/config/variants/1.0/only_div/0001/: K1-Unet_medium-only_div_0001.yaml
ml/config/variants/1.0/only_div/001/: K1-Unet_medium-only_div_001.yaml  K2-Unet_medium-only_div_001.yaml  K3-Unet_medium-only_div_001.yaml  K4-Unet_medium-only_div_001-emit_001.yaml  K4-Unet_medium-only_div_001-rwdecay080.yaml  K4-Unet_medium-only_div_001.yaml
ml/config/variants/1.0/only_div/001-drop/: K2-Unet_medium-only_div_001-drop.yaml  K4-Unet_medium-only_div_001-drop.yaml
ml/config/variants/1.0/only_div/001-small/: K1-UNet_small-only_div_001.yaml  K2-UNet_small-only_div_001.yaml  K3-UNet_small-only_div_001.yaml  K4-UNet_small-only_div_001.yaml  K5-UNet_small-only_div_001.yaml
ml/config/variants/1.0/only_div/001-small-medium/: K1-UNet_small-medium-only_div_001.yaml  K2-UNet_small-medium-only_div_001.yaml  K3-UNet_small-medium-only_div_001.yaml  K4-UNet_small-medium-only_div_001.yaml
ml/config/variants/1.0/only_div/005/: K1-Unet_medium-only_div_005.yaml
ml/config/variants/1.1/full-rollout/div-grad/: Full-K1-Unet_medium-div_grad.yaml  Full-K2-Unet_medium-div_grad.yaml  Full-K3-Unet_medium-div_grad.yaml  Full-K4-Unet_medium-div_grad.yaml
ml/config/variants/1.1/full-rollout/only-div/: Full-K1-Unet_medium-only_div.yaml  Full-K2-Unet_medium-only_div.yaml  Full-K3-Unet_medium-only_div.yaml  Full-K4-Unet_medium-only_div.yaml
ml/config/variants/1.1/simple/: simple-Unet_medium-div_grad.yaml  simple-Unet_medium-only_div.yaml  simple-Unet_medium-only_grad.yaml  simple-Unet_medium-only_mse-linear.yaml  simple-Unet_medium-only_mse.yaml
ml/config/variants/baseline/: K1-Unet_medium-baseline.yaml  K2-Unet_medium-baseline.yaml  K3-Unet_medium-baseline.yaml
ml/config/variants/baseline-nearest/: K1-Unet_medium_nearest-baseline.yaml  K2-Unet_medium_nearest-baseline.yaml  K3-Unet_medium_nearest-baseline.yaml
ml/config/variants/experiments/no_phys/: K1-Unet_medium-no_phys.yaml  K2-Unet_medium-no_phys.yaml  K3-Unet_medium-no_phys.yaml
ml/config/variants/experiments/only_div/0001/: K2-Unet_medium-only_div_0001.yaml  K3-Unet_medium-only_div_0001.yaml
ml/config/variants/experiments/only_div/0005/: K1-Unet_medium-only_div_0005.yaml  K2-Unet_medium-only_div_0005.yaml  K3-Unet_medium-only_div_0005.yaml
ml/config/variants/experiments/only_div/001/: K1-Unet_medium-only_div_001.yaml  K2-Unet_medium-only_div_001.yaml  K3-Unet_medium-only_div_001.yaml
ml/config/variants/experiments/only_div/001-drop/: K3-Unet_medium-only_div_001-drop.yaml
ml/config/variants/experiments/only_div/001-small/: K1-UNet_small-only_div_001.yaml  K2-UNet_small-only_div_001.yaml  K3-UNet_small-only_div_001.yaml  K4-UNet_small-only_div_001.yaml
ml/config/variants/experiments/only_div/005/: K2-Unet_medium-only_div_005.yaml  K3-Unet_medium-only_div_005.yaml
ml/dataset/: augmentations.py  normalization.py  npz_sequence.py
ml/inference/: backend.py  simple_infer.py
ml/models/: small_unet.py  small_unet_full.py  unet.py
ml/scripts/: check_gt_divergence.py  eval_rollout.py  export_to_onnx.py  simple_infer.py  train.py  train_legacy.py  variant_manager.py
ml/tests/: test_physics_loss.py
ml/training/: early_stopping.py  metrics.py  physics_loss.py  test_evaluation.py  trainer.py  training_plots.py
ml/utils/: data_splits.py  grid_normalization.py  seed.py
shared/: config.py
vdb-tools/: .env.example  README.md  config.py  create_simulations.py  environment.yml  pyproject.toml  pyrightconfig.json  render_npz_field_to_png.py  vdb_to_numpy.py
vdb-tools/blender_scripts/: create_random_simulation.py  extract_alembic_metadata.py
vdb-tools/config/: simulation_config.yaml
vdb-tools/vdb_core/: __init__.py  abc_metadata.py  batch_processing.py  emitter_projection.py  grid_extraction.py  mesh_projection.py  statistics.py  transforms.py  vdb_io.py
